# github-actions-sandbox

./: pyproject.toml
.github/workflows/: python-package.yml
ci_sample/: main.py
ci_sample/tests/: test_sample.py
